--- a/index.html
+++ b/index.html
@@ -5,9 +5,121 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Головна</title>
 </head>
 <body>
-    
+    <!-- header -->
+    <header>
+        <!-- header navigation -->
+        <nav>
+            <a href="/">WebStudio</a>
+            <ul>
+                <li><a href="http://">Студія</a><img src="./images/finger.svg" alt="Vector"></li>
+                <li> <a href="http://">Портфоліо</a></li>
+                <li><a href="http://">Контакти</a></li>
+            </ul>
+        </nav>
+        <!-- contacts -->
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a><img src="./images/finger.svg" alt="Vector"></li>
+            <li><a href="tel:++380961111111">+38 096 111 11 11</a></li>
+        </ul>
+    </header>
+    <!-- main section -->
+    <main>
+        <div>
+            <section>
+                <h1>Ефективні рішення для <br /> вашого бізнесу</h1>
+                <button>Замовити послугу</button>
+            </section>
+        </div>
+        <!-- section about -->
+        <section>
+            <ul>
+                <li>
+                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                </li>
+                <li>
+                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
+                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                </li>
+                <li>
+                    <h3>ПЛАНУВАННЯ</h3>
+                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                </li>
+                <li>
+                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                </li>
+            </ul>
+        </section>
+        <!-- section what we do -->
+        <section>
+            <h2>Чим ми займаємося</h2>
+            <ul>
+                <li>
+                    <img src="./images/1001.jpg" alt="людина працює на персональному компьютері" width="370">
+                </li>
+                <li>
+                    <img src="./images/1002.jpg" alt="людина працює на лептопі" width="370">
+                </li>
+                <li>
+                    <img src="./images/1003.jpg" alt="результат роботи на планшеті" width="370">
+                </li>
+            </ul>
+        </section>
+        <!-- team -->
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <figure>
+                        <img src="./images/1004.jpg" alt="співробітник Ігор" width="270">
+                        <figcaption>
+                            <h3>Ігор Дем'яненко</h3>
+                            <p>Product Designer</p>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="./images/1005.jpg" alt="співробітник Ольга" width="270">
+                        <figcaption>
+                            <h3>Ольга Рєпіна</h3>
+                            <p>Frontend Developer</p>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="./images/1006.jpg" alt="співробітник Микола" width="270">
+                        <figcaption>
+                            <h3>Микола Тарасов</h3>
+                            <p>Marketing</p>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="./images/1007.jpg" alt="співробітник Михайло" width="270">
+                        <figcaption>
+                            <h3>Михайло Єрмаков</h3>
+                            <p>UI Designer</p>
+                        </figcaption>
+                    </figure>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <!-- footer -->
+    <footer>
+        <a href="/">WebStudio</a>
+        <address>
+            м. Київ, пр-т Лесі Українки, 26 <br />
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
+            <a href="tel:++380961111111">+38 096 111 11 11</a>
+        </address>
+    </footer>
 </body>
 </html>
