--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Головна</title>
+    <title>Студія</title>
 </head>
 <body>
     <!-- header -->
@@ -14,9 +14,9 @@
         <nav>
             <a href="/">WebStudio</a>
             <ul>
-                <li><a href="http://">Студія</a><img src="./images/finger.svg" alt="Vector"></li>
-                <li> <a href="http://">Портфоліо</a></li>
-                <li><a href="http://">Контакти</a></li>
+                <li><a href="/">Студія</a><img src="./images/finger.svg" alt="Vector"></li>
+                <li> <a href="/">Портфоліо</a></li>
+                <li><a href="/">Контакти</a></li>
             </ul>
         </nav>
         <!-- contacts -->
@@ -57,17 +57,11 @@
         <!-- section what we do -->
         <section>
             <h2>Чим ми займаємося</h2>
-            <ul>
-                <li>
-                    <img src="./images/1001.jpg" alt="людина працює на персональному компьютері" width="370">
-                </li>
-                <li>
-                    <img src="./images/1002.jpg" alt="людина працює на лептопі" width="370">
-                </li>
-                <li>
-                    <img src="./images/1003.jpg" alt="результат роботи на планшеті" width="370">
-                </li>
-            </ul>
+            <p>
+                <img src="./images/1001.jpg" alt="людина працює на персональному компьютері" width="370">
+                <img src="./images/1002.jpg" alt="людина працює на лептопі" width="370">
+                <img src="./images/1003.jpg" alt="результат роботи на планшеті" width="370">
+            </p>
         </section>
         <!-- team -->
         <section>
