--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- header -->
-    <header>
+    <header class="header">
         <!-- header navigation -->
         <nav>
             <a href="/">WebStudio</a>
