some fix. Final work.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Студія</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- header -->
@@ -14,14 +14,14 @@
         <nav>
             <a href="/">WebStudio</a>
             <ul>
-                <li><a href="/">Студія</a><img src="./images/finger.svg" alt="Vector"></li>
+                <li><a href="/">Студія</a></li>
                 <li> <a href="/">Портфоліо</a></li>
                 <li><a href="/">Контакти</a></li>
             </ul>
         </nav>
         <!-- contacts -->
         <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a><img src="./images/finger.svg" alt="Vector"></li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:++380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
@@ -59,19 +59,19 @@
             <h2>Чим ми займаємося</h2>
             <ul>
                 <li>
-                    <img src="./images/1001.jpg" alt="людина працює на персональному компьютері" width="370">
-                    <img src="./images/1002.jpg" alt="людина працює на лептопі" width="370">
-                    <img src="./images/1003.jpg" alt="результат роботи на планшеті" width="370">
+                    <img src="./images/about-1.jpg" alt="людина працює на персональному компьютері" width="370">
+                    <img src="./images/about-2.jpg" alt="людина працює на лептопі" width="370">
+                    <img src="./images/about-3.jpg" alt="результат роботи на планшеті" width="370">
                 </li>
             </ul>
         </section>
-        <!-- team -->
+        <!-- about team -->
         <section>
             <h2>Наша команда</h2>
             <ul>
                 <li>
                     <figure>
-                        <img src="./images/1004.jpg" alt="співробітник Ігор" width="270">
+                        <img src="./images/manager-1.jpg" alt="співробітник Ігор" width="270">
                         <figcaption>
                             <h3>Ігор Дем'яненко</h3>
                             <p>Product Designer</p>
@@ -80,7 +80,7 @@
                 </li>
                 <li>
                     <figure>
-                        <img src="./images/1005.jpg" alt="співробітник Ольга" width="270">
+                        <img src="./images/manager-2.jpg" alt="співробітник Ольга" width="270">
                         <figcaption>
                             <h3>Ольга Рєпіна</h3>
                             <p>Frontend Developer</p>
@@ -89,7 +89,7 @@
                 </li>
                 <li>
                     <figure>
-                        <img src="./images/1006.jpg" alt="співробітник Микола" width="270">
+                        <img src="./images/manager-3.jpg" alt="співробітник Микола" width="270">
                         <figcaption>
                             <h3>Микола Тарасов</h3>
                             <p>Marketing</p>
@@ -98,7 +98,7 @@
                 </li>
                 <li>
                     <figure>
-                        <img src="./images/1007.jpg" alt="співробітник Михайло" width="270">
+                        <img src="./images/manager-4.jpg" alt="співробітник Михайло" width="270">
                         <figcaption>
                             <h3>Михайло Єрмаков</h3>
                             <p>UI Designer</p>
