--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         </div>
         <!-- section about -->
         <section>
+            <h2 hidden="true">About</h2>
             <ul>
                 <li>
                     <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -60,7 +61,11 @@
             <ul>
                 <li>
                     <img src="./images/about-1.jpg" alt="людина працює на персональному компьютері" width="370">
-                    <img src="./images/about-2.jpg" alt="людина працює на лептопі" width="370">
+                </li>
+                <li>
+                    <img src="./images/about-2.jpg" alt="людина працює на лептопі" width="370"> 
+                </li>
+                <li>
                     <img src="./images/about-3.jpg" alt="результат роботи на планшеті" width="370">
                 </li>
             </ul>
@@ -70,40 +75,24 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <figure>
-                        <img src="./images/manager-1.jpg" alt="співробітник Ігор" width="270">
-                        <figcaption>
-                            <h3>Ігор Дем'яненко</h3>
-                            <p>Product Designer</p>
-                        </figcaption>
-                    </figure>
+                    <img src="./images/manager-1.jpg" alt="співробітник Ігор" width="270">
+                    <h3>Ігор Дем'яненко</h3>
+                    <p lang="en">Product Designer</p>
                 </li>
                 <li>
-                    <figure>
-                        <img src="./images/manager-2.jpg" alt="співробітник Ольга" width="270">
-                        <figcaption>
-                            <h3>Ольга Рєпіна</h3>
-                            <p>Frontend Developer</p>
-                        </figcaption>
-                    </figure>
+                    <img src="./images/manager-2.jpg" alt="співробітник Ольга" width="270">
+                    <h3>Ольга Рєпіна</h3>
+                    <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
-                    <figure>
-                        <img src="./images/manager-3.jpg" alt="співробітник Микола" width="270">
-                        <figcaption>
-                            <h3>Микола Тарасов</h3>
-                            <p>Marketing</p>
-                        </figcaption>
-                    </figure>
+                    <img src="./images/manager-3.jpg" alt="співробітник Микола" width="270">
+                    <h3>Микола Тарасов</h3>
+                    <p lang="en">Marketing</p>
                 </li>
                 <li>
-                    <figure>
-                        <img src="./images/manager-4.jpg" alt="співробітник Михайло" width="270">
-                        <figcaption>
-                            <h3>Михайло Єрмаков</h3>
-                            <p>UI Designer</p>
-                        </figcaption>
-                    </figure>
+                    <img src="./images/manager-4.jpg" alt="співробітник Михайло" width="270">
+                    <h3>Михайло Єрмаков</h3>
+                    <p lang="en">UI Designer</p>
                 </li>
             </ul>
         </section>
@@ -112,9 +101,11 @@
     <footer>
         <a href="/">WebStudio</a>
         <address>
-            м. Київ, пр-т Лесі Українки, 26 <br />
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
-            <a href="tel:++380961111111">+38 096 111 11 11</a>
+            <ul>
+                <li><p>м. Київ, пр-т Лесі Українки, 26</p></li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:++380961111111">+38 096 111 11 11</a></li>
+            </ul>
         </address>
     </footer>
 </body>
