--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <!-- section about -->
         <section>
-            <h2 hidden="true">About</h2>
+            <h2 hidden>About</h2>
             <ul>
                 <li>
                     <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
