--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- header -->
     <header class="header">
         <!-- header navigation -->
-        <nav>
+        <nav class="navigation">
             <a href="/">WebStudio</a>
             <ul>
                 <li><a href="/">Студія</a></li>
